--- a/src/style.css
+++ b/src/style.css
@@ -22,3 +22,45 @@
 	font-size: 18px;
 	font-weight: bold;
 }
+
+.title__name {
+	font-size: 18px;
+	color: green;
+}
+
+.contanier {
+    background-color: gray;
+    width: 100vw;
+    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+}
+
+.section{
+    max-width: 75%;
+    background-color: white;
+
+}
+
+@media(min-width: 760 px){
+    .section{
+        max-width: 75%;
+    }
+    
+}
+
+.product{
+    border-bottom: 1px solid gray;
+    padding: 8px 8px;
+    display: flex;
+    flex-direction: row;
+}
+
+.product__image{
+    width: 128px;
+    height: 128px;
+}
+.product__info{
+    margin-left: 8px;
+}
